--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,10 @@
-{"token": "", "channel": "", "bet": "300","rate":"4","webhook": "No", "webhookping": "NONE","solve": "YES","maxbet":"Reset"}
+{
+  "token": "",
+  "channel": "",
+  "bet": "300",
+  "rate": "4",
+  "webhook": "No",
+  "webhookping": "NONE",
+  "solve": "YES",
+  "maxbet": "Reset"
+}
